# idata

./: .ghc.environment.aarch64-darwin-9.6.7  .gitignore  CHANGELOG.md  LICENSE  cabal.project  idata.cabal  idata.org  install_ihaskell_kernel.sh  kernel.json  marco.sh  readme.md  readme.org
app/: Main.hs
src/: IData.hs
