cabal-version: 3.0
name: idata
version: 0.1.0.0
synopsis: idata
description: interactive data science in Haskell
license: BSD-3-Clause
license-file: LICENSE
author: Tony Day
maintainer: tonyday567@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules: IData
  build-depends:
    base ^>=4.18.3.0,
    chart-svg,
    ihaskell,
    unix,
    directory,

  hs-source-dirs: src
  default-language: Haskell2010

executable idata
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18.3.0,
    idata,

  hs-source-dirs: app
  default-language: Haskell2010
